<resources>
    <string name="app_name">Roadmaps</string>
    <string name="basci">Learn the Basics</string>
    <string name="advanced">Advanced Topics</string>
    <string name="framework">Learn a Framework</string>
    <string name="test">Testing your Apps</string>
    <string name="data">Datastructures and Algorithms</string>
    <string name="Python_Roadmap">Python Roadmap</string>

    <string name="ok">OK</string>
    <string name="babout">About</string>

    <string name="basicSynt">Basic Syntax</string>
    <string name="variables">Variables and Data Types</string>
    <string name="conditionals">Conditionals</string>
    <string name="typeCasting">Type Casting, Exceptions</string>
    <string name="func">Functions, Buildin Func</string>
    <string name="lists">Lists, Tuples, Sets, Dictionaries</string>

    <string name="array">Arrays and Linked Lists</string>
    <string name="heops">Heops, Stacks and Queues</string>
    <string name="hash">Hash Tables</string>
    <string name="binary">Binary Search Trees</string>
    <string name="recursion">Recursion</string>
    <string name="sort">Sort Algorithms</string>

    <string name="inter">Iterators</string>
    <string name="regex">RegEx</string>
    <string name="deco">Decorators</string>
    <string name="lambda">Lambdas</string>
    <string name="oop">OOP and Modules</string>
    <string name="modules">Modules</string>
    <string name="pack">Package Managers</string>

    <string name="synch">Synchronous</string>
    <string name="asynch">Asynchronous</string>
    <string name="api">FastAPI</string>

    <string name="django">Django</string>
    <string name="flask">Flask</string>
    <string name="pyramid">Pyramid</string>
    <string name="synchbutt">Back to Frameworks</string>

    <string name="gevent">gevent</string>
    <string name="aiohttp">aiohttp</string>
    <string name="tornado">Tornado</string>
    <string name="sanic">Sanic</string>

    <string name="doctest">doctest</string>
    <string name="nose">nose</string>
    <string name="pytest">pytest</string>
    <string name="unitest">unittest/pyUnit</string>

    <string name="classes">Classes</string>
    <string name="inher">Inheritance</string>
    <string name="methods">Methods, Dunder</string>
    <string name="builtin">Builtin</string>
    <string name="custom">Custom</string>

    <string name="pypi">PyPI</string>
    <string name="pip">Pip</string>
    <string name="conda">Conda</string>

    <string name="support">You can support my work by donate</string>
    <string name="btc">3KYamLohstiQgeKTdQMe44f77bQ5cNnKiU</string>
    <string name="eth">0x024911e68C5e9aF6793EecAB842003a8a79c08De</string>
    <string name="email">adamfatyga@hotmail.com</string>
    <string name="website">adam-fatyga.ddns.net</string>
    <string name="contact">Contact:</string>
    <string name="version">Version: 0.9</string>
</resources>